added presentation slide

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -52,7 +52,7 @@ literate={\$}{{\textcolor{green}{\$}}}1
 }
 
 
-
+\setbeamercovered{transparent}
 \pagenumbering{arabic}
 
 %%Se define el "environment" teorema
@@ -114,6 +114,63 @@ literate={\$}{{\textcolor{green}{\$}}}1
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+
+\begin{frame}{Presentación}
+  
+  \begin{columns}
+    \begin{column}{0.5\linewidth}
+      \begin{block}{Ing. Paola B. Torres}
+        \begin{itemize}
+          \item Ing. Química
+          \item Estudiante de Doctorado en FRSR 
+          \item Grupo Vinculado Bionanotecnología y sistemas complejos FRSR UTN-INFAP 
+          \item Ayudante de Primera en Sistemas Dinamicos I 
+        \end{itemize}
+      \end{block}
+    % \textbf {Ing. Paola B. Torres}
+
+
+
+  \end{column}
+
+    \begin{column}{0.5\linewidth}
+
+      \begin{block}{Esp. Ing. Daniela Armijo} 
+        \begin{itemize}
+          \item 
+        \end{itemize}
+      \end{block}
+      % \begin{figure}
+      %   \includegraphics[width=0.45\textwidth]{images/group-photo.jpg}
+      % \end{figure}
+   
+    \end{column}
+
+  \end{columns}
+ 
+  \begin{figure}
+    \includegraphics[width=0.2\textwidth]{images/logo_charles.png}
+    % \includegraphics[width=0.2\textwidth]{images/logo_conicet.png}
+    \includegraphics[width=0.2\textwidth]{images/Logo_UTN.png}
+  \end{figure}
+  % Soft matter Research Group at Charles University, Prague, Czech Republic. 
+
+  % \begin{figure}
+  %   \includegraphics[width=0.2\textwidth]{images/Logo_UTN.png}
+
+  % \end{figure}
+
+  % \begin{figure}
+  %   \includegraphics[width=0.2\textwidth]{images/logo_conicet.png}
+  % \end{figure}
+
+
+
+
+
+
+\end{frame}
+
 \section{Introducción} 
 
 \subsection{¿Qué es Git?}
@@ -134,7 +191,7 @@ literate={\$}{{\textcolor{green}{\$}}}1
     \includegraphics[width = 0.3\textwidth]{images/logo_git.png}
   \end{figure}
 
-  \begin{itemize}
+  \begin{itemize}[<+->]
     \item Es una herramienta de control de versiones distribuido
     \item Permite trabajar en un proyecto sin necesidad de estar
     conectados a un servidor central.
@@ -207,7 +264,7 @@ literate={\$}{{\textcolor{green}{\$}}}1
   \begin{columns}
     \begin{column}{.6\textwidth}
 
-      \begin{itemize}
+      \begin{itemize}[<+->]
 
         \item Es una plataforma de alojamiento de código en la nube que utiliza el \textbf{sistema de control de versiones Git}.
         \item Colaboración en proyectos privados y abiertos. 
@@ -660,18 +717,6 @@ Ref: Documentación para \href{https://docs.github.com/es/authentication/connect
 
 \end{frame}
 
-\begin{frame}{Agradecimientos}
-  
-  \begin{figure}
-    \includegraphics[width=\textwidth]{images/logo_charles.png}
-  \end{figure}
-
-  \begin{figure}
-    \includegraphics[width=0.45\textwidth]{images/group-photo.jpg}
-  \end{figure}
-
-
-\end{frame}
 
 
 \section{Referencias}
